LFA: Voronoi Maze dark mode, Queen's War logging tag fix

--- a/More/Logfile Analyzer Styling Data.css
+++ b/More/Logfile Analyzer Styling Data.css
@@ -3442,6 +3442,23 @@
 		width: 48px;
 		margin: 0 0 -2px 0;
 	}
+/* Voronoi Maze */
+	.dark-mode svg.voronoi-maze {
+		opacity: 0.7;
+	}
+	div.voronoi-maze {
+		position: relative;
+		background-color: #eef;
+		padding: .1cm .25cm;
+		margin: 0 auto .5cm;
+		width: 12cm;
+	}
+	.dark-mode div.voronoi-maze {
+		background-color: #ddf;
+	}
+		div.voronoi-maze .info {
+			color: #000;
+		}
 /* Walking Cube */
 	svg.walking-cube-path-diagram {
 		display: block;
